--- a/project-pages/SA-GS/static/css/dics.original.css
+++ b/project-pages/SA-GS/static/css/dics.original.css
@@ -54,7 +54,7 @@
 }
 
 .b-dics__slider {
-    color        : #FFFFFF;
+    color        : #bababa;
     position     : absolute;
     left         : 100%;
     top          : 0;
